Modified main docker-compose.yaml for new deployed Proxy, TestToken and HybridExchange contracts and Changed relayer address and private key accordingly

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,9 +43,9 @@ services:
       - 127.0.0.1:3000:8043
     environment:
       - CONFIG_VARS=REACT_APP_API_URL,REACT_APP_WS_URL,REACT_APP_NODE_URL,REACT_APP_HYDRO_PROXY_ADDRESS,REACT_APP_HYDRO_TOKEN_ADDRESS,REACT_APP_WETH_TOKEN_ADDRESS,REACT_APP_NETWORK_ID
-      - REACT_APP_API_URL=http://localhost:3001
-      - REACT_APP_WS_URL=ws://localhost:3002
-      - REACT_APP_NODE_URL=http://localhost:8545
+      - REACT_APP_API_URL=http://dex-demo-api.hydroprotocol.io
+      - REACT_APP_WS_URL=ws://dex-demo-ws.hydroprotocol.io
+      - REACT_APP_NODE_URL=http://dex-demo-rpc.hydroprotocol.io
       - REACT_APP_HYDRO_PROXY_ADDRESS=0x04f67e8b7c39a25e100847cb167460d715215feb
       - REACT_APP_HYDRO_TOKEN_ADDRESS=0x4c4fa7e8ea4cfcfc93deae2c0cff142a1dd3a218
       - REACT_APP_WETH_TOKEN_ADDRESS=0x4a817489643A89a1428b2DD441c3fbe4DBf44789
@@ -70,8 +70,8 @@ services:
       - LAUNCHER_HEALTH_CHECK_URL=http://launcher:4005/metrics
       - WATCHER_HEALTH_CHECK_URL=http://watcher:4003/metrics
       - WEBSOCKET_HEALTH_CHECK_URL=http://ws:4002/metrics
-      - HSK_PROXY_ADDRESS=0x04f67e8b7c39a25e100847cb167460d715215feb
-      - HSK_RELAYER_ADDRESS=0x93388b4efe13b9b18ed480783c05462409851547
+      - HSK_PROXY_ADDRESS=0xbE48E4bE73504839A6821D16B32EFA32C172A2cf
+      - HSK_RELAYER_ADDRESS=0x8669b9aceb0ef54c5dd121fbb129b98d3106f0ab
     volumes:
       - datavolume:/data
     depends_on:
@@ -91,11 +91,11 @@ services:
     environment:
       - HSK_DATABASE_URL=postgres://postgres:postgres@db/postgres?sslmode=disable
       - HSK_REDIS_URL=redis://redis:6379/0
-      - HSK_HYBRID_EXCHANGE_ADDRESS=0x5c0286bef1434b07202a5ae3de38e66130d5280d
+      - HSK_HYBRID_EXCHANGE_ADDRESS=0x765100D19e5417a0bfAaD708d71caE50935b0bF6
       - HSK_BLOCKCHAIN_RPC_URL=http://ethereum-node:8545
-      - HSK_HYDRO_TOKEN_ADDRESS=0x4c4fa7e8ea4cfcfc93deae2c0cff142a1dd3a218
-      - HSK_PROXY_ADDRESS=0x04f67e8b7c39a25e100847cb167460d715215feb
-      - HSK_RELAYER_ADDRESS=0x93388b4efe13b9b18ed480783c05462409851547
+      - HSK_HYDRO_TOKEN_ADDRESS=0x90977d1f754fC30f6209d1F6768B477578464E29
+      - HSK_PROXY_ADDRESS=0xbE48E4bE73504839A6821D16B32EFA32C172A2cf
+      - HSK_RELAYER_ADDRESS=0x8669b9aceb0ef54c5dd121fbb129b98d3106f0ab
       - HSK_LOG_LEVEL=DEBUG
       - METRICS_PORT=4001
       - HSK_PROXY_MODE=deposit
@@ -139,7 +139,7 @@ services:
       - HSK_REDIS_URL=redis://redis:6379/0
       - HSK_BLOCKCHAIN_RPC_URL=http://ethereum-node:8545
       - HSK_LOG_LEVEL=DEBUG
-      - HSK_HYBRID_EXCHANGE_ADDRESS=0x5c0286bef1434b07202a5ae3de38e66130d5280d
+      - HSK_HYBRID_EXCHANGE_ADDRESS=0x765100D19e5417a0bfAaD708d71caE50935b0bF6
       - METRICS_PORT=4003
     volumes:
       - datavolume:/data
@@ -159,8 +159,8 @@ services:
     environment:
       - HSK_DATABASE_URL=postgres://postgres:postgres@db/postgres?sslmode=disable
       - HSK_REDIS_URL=redis://redis:6379/0
-      - HSK_HYBRID_EXCHANGE_ADDRESS=0x5c0286bef1434b07202a5ae3de38e66130d5280d
-      - HSK_PROXY_ADDRESS=0x04f67e8b7c39a25e100847cb167460d715215feb
+      - HSK_HYBRID_EXCHANGE_ADDRESS=0x765100D19e5417a0bfAaD708d71caE50935b0bF6
+      - HSK_PROXY_ADDRESS=0xbE48E4bE73504839A6821D16B32EFA32C172A2cf
       - HSK_LOG_LEVEL=DEBUG
       - METRICS_PORT=4004
     volumes:
@@ -180,9 +180,9 @@ services:
     environment:
       - HSK_DATABASE_URL=postgres://postgres:postgres@db/postgres?sslmode=disable
       - HSK_BLOCKCHAIN_RPC_URL=http://ethereum-node:8545
-      - HSK_HYBRID_EXCHANGE_ADDRESS=0x5c0286bef1434b07202a5ae3de38e66130d5280d
-      - HSK_RELAYER_ADDRESS=0x93388b4efe13b9b18ed480783c05462409851547
-      - HSK_RELAYER_PK=95b0a982c0dfc5ab70bf915dcf9f4b790544d25bc5e6cff0f38a59d0bba58651
+      - HSK_HYBRID_EXCHANGE_ADDRESS=0x765100D19e5417a0bfAaD708d71caE50935b0bF6
+      - HSK_RELAYER_ADDRESS=0x8669b9aceb0ef54c5dd121fbb129b98d3106f0ab
+      - HSK_RELAYER_PK=0xa5bd76440d0cc0c94dc7f38600e5c501e18f486a6a924e17bb6021e1342200d0
       - HSK_LOG_LEVEL=DEBUG
       - METRICS_PORT=4005
     volumes:
